--- a/final/career.html
+++ b/final/career.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>A4 Technology</title>
+<title>A4 Technology Solutions</title>
 <!-- Bootstrap -->
 <link href="css/media.css" rel="stylesheet">
 <link href="css/bootstrap.css" rel="stylesheet">
